--- a/src/assets/css/registro.css
+++ b/src/assets/css/registro.css
@@ -1,12 +1,14 @@
 /* Estilo para el contenedor principal del formulario */
 .container-form {
-  max-width: 800px;
+  max-width: 600px;
   margin: 0 auto;
+
   padding: 20px;
   background-color: #f4f4f4;
   border: 1px solid #ddd;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  flex-direction: column;
 }
 
 /* Estilo para los elementos de formulario */
@@ -18,6 +20,7 @@ label {
   display: block;
   font-weight: bold;
   margin-bottom: 5px;
+  align-items: center;
 }
 
 input[type="text"],
