nueva desino dasho

--- a/src/pages/css/home.css
+++ b/src/pages/css/home.css
@@ -1,7 +1,19 @@
 .fondo-pagina {
-  /* background-image: url("../../assets/img/fon.jpg"); */
+  /* background-image: url("../../assets/img/imgFondo.jpg"); */
   background-size: cover;
   background-position: center;
   height: 100vh;
+
   font-family: "Roboto", Arial, sans-serif;
 }
+/* .fondo-pagina::before {
+  content: "";
+  position: absolute;
+
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  pointer-events: none;
+} */
